--- a/example-maxcoin.conf
+++ b/example-maxcoin.conf
@@ -1,3 +1,8 @@
+# MaxCoin Example Config
+# Linux /home/<username>/.maxcoin/maxcoin.conf
+# Windows C:\Users\<username>\AppData\Roaming\MaxCoin\maxcoin.conf
+# OSX /Users/<username>/Library/Application Support/MaxCoin/maxcoin.conf
+
 # Seed nodes
 addnode=maxexplorer.cloudapp.net
 addnode=maxcoin.cloudapp.net
